Starting on design

--- a/index.html
+++ b/index.html
@@ -1,2 +1,35 @@
-Hello World
-Bonjour le monde
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Alex - PT Richmond Southwest London</title>
+    <style>
+        body {
+            background: #000;
+            color: #fff;
+            margin: 0;
+            font-family: Arial, sans-serif;
+        }
+        .banner {
+            background: #d00;
+            color: #fff;
+            text-align: center;
+            padding: 1.2em 0;
+            font-size: 1.7em;
+            font-weight: bold;
+            letter-spacing: 1px;
+        }
+    </style>
+</head>
+<body>
+    <div class="banner">Alex - PT Richmond Southwest London</div>
+    <div style="padding:2em;">
+        <!-- Main content goes here -->
+        Hello. I am Alex, a Personal Trainer based in Richmond, Southwest London.<br>
+        I specialise in rehab, golf, and preparation for big events.<br>
+        My goal is to help clients achieve the best results with optimal training.<br>
+        I want you to train yourself into the best version of you.
+    </div>
+</body>
+</html>
